--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}rango{% endblock %}
+{% block title %}Index{% endblock %}
 {% block body_block %}
 	{% if user.is_authenticated %}
-	<h1>Rango says....hello {{ user.username }}</h1>
+		<div class="page-header">
+			<h1>Rango says....hello {{ user.username }}</h1>
 	{% else %}
-	<h1>Rango says....hello world!</h1>
+			<h1>Rango says....hello world!</h1>
 	{% endif %}
-	{% if categories %}
-		<ul>
-			{% for category in categories %}
-				<li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
-			{% endfor %}
-		</ul>
-	{% else %}
-		<strong>There are no categories present</strong>
-	{% endif %}
+	</div>
+	<div class="row placeholders">
+		<div class="col-xs-12 col-sm-6 placeholder">
+			<h4>Categories</h4>
+			{% if categories %}
+			<ul>
+				{% for category in categories %}
+					<li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
+				{% endfor %}
+			</ul>
+			{% else %}
+				<strong>There are no categories present</strong>
+			{% endif %}
+		</div>
+		<div class="col-xs-12 col-sm-6 placeholder">
+			<h4>Pages</h4>
+			{% if pages %}
+				<ul>
+				{% for page in pages %}
+					<li><a href="{{page.url}}">{{page.title}}</a></li>
+				{% endfor %}
+				</ul>
+			{% else %}
+				<strong>There are no categories present.</strong>
+			{% endif %}
+		</div>
+	</div>
+	<p>visits:{{visits}}</p>
 {% endblock %}
